Bug 680817 - Keep GLXPixmaps bound to textures between updates on NVIDIA drivers to improve performance. r=joe